Added striptags to Brant's version of the homepage shelf.
Former-commit-id: 14af30c6c6c138e546aed693e813af1e76b41d56
Former-commit-id: 23823854bd8688caf254cb84422a127922aadae7
Former-commit-id: 2e3ee863580201ee8e5a7f6ab771eea488998275
Former-commit-id: cccddb59ef4ca3aedf00ee9bf87ee25fd81eed97
Former-commit-id: 325b8500cb3427d39cbd9daa8ad1830c1753c3aa
Former-commit-id: f153b4d63b32ff03e50a64066fa1cb520b321776

--- a/src/podiobooks/templates/themes/pb2-jq/main/index.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/index.html
@@ -38,7 +38,7 @@
 			</a>
 		</p>
 	
-		<p>{{t.description|truncatewords:"15"}}</p>
+		<p>{{t.description|striptags|truncatewords:"15"}}</p>
 	</div>
 	{% endfor %}
 </div>
