Updated to use the python-twitter lib instead of the twitter lib, which was barfing under older versions of python.
Former-commit-id: cd293c686fab75c96c58a5a4ad26499364312720
Former-commit-id: ea153e357353394dca34cbcca8ddbe4205feb3df
Former-commit-id: 1fbf7cfa54ebc0b0ad5ad5ecdc2f52fc869c9633
Former-commit-id: b363674f1a727daf0246edd26c4ca3030a3527b6
Former-commit-id: 95ac9273eab5cf3874352dcee8ac4adb7daa4d5a
Former-commit-id: 97906f733feae591bef9fe2dd1e5a41a6c239284

--- a/src/podiobooks/templates/themes/pb2-jq/social/twitter_search.html
+++ b/src/podiobooks/templates/themes/pb2-jq/social/twitter_search.html
@@ -4,7 +4,7 @@
 <ul>
 	{% for tweet in tweets %}
 	<li style="margin: 5px 0 0 0">
-		{{ tweet.text|safe|replace_bad_words }}
+		<strong>{{tweet.user.screen_name}}:</strong> {{ tweet.text|safe|replace_bad_words }}
 	</li>
 	{% endfor %}
 </ul>
