Added messaging for users with no subscriptions.
Former-commit-id: e02c64a88b9fe7e2598eaf32a4a87d0c363dd042
Former-commit-id: cef09cdd6880b84fa0e2f3854ffada7c5ad4c817
Former-commit-id: 54b26ddadadb9fe6ad10e3933e0b2f8a291c1d59
Former-commit-id: 30b53eefc6f93f80221cf196284871d96e619bbc
Former-commit-id: e986f925a1dadd0f9a0b3037e22d0bd0326db260
Former-commit-id: 302f04128d281eb94846163295ebf889996bbbaf

--- a/src/podiobooks/templates/themes/pb2-jq/subscription/tags/show_title_subscriptions.html
+++ b/src/podiobooks/templates/themes/pb2-jq/subscription/tags/show_title_subscriptions.html
@@ -6,6 +6,8 @@
     </li>
     {% endfor %}
 </ul>
+{% else %}
+<p>You have no active subscriptions.</p>
 {% endif %}
 {% if inactive_subscriptions %}<h3>Inactive Subscriptions</h3>
 <ul class="pb-subscription-list">
@@ -15,4 +17,6 @@
     </li>
     {% endfor %}
 </ul>
+{% else %}
+<p>You have no inactive subscriptions.</p>
 {% endif %}
