Added alt text for profile avatar.

--- a/src/podiobooks/templates/themes/pb2-jq/profile/profile.html
+++ b/src/podiobooks/templates/themes/pb2-jq/profile/profile.html
@@ -105,7 +105,7 @@
         Avatar (Defaults to Gravatar for your Email Address):
     </dt>
     <dd>
-        <img src="{% avatar_url user 65 %}">
+        <img src="{% avatar_url user 65 %}" alt="user avatar">
     </dd>
 </dl>
 <div class="pb-float-clear">
