CSS/JS Minify changes
Former-commit-id: 0e110072812c7627ad8a87523487fc28aa731d89
Former-commit-id: 47f9591afa9940c85810f5b70b253238c71b8105
Former-commit-id: 42011a7eacb5ed5edbd98994db364fcc5851357d
Former-commit-id: e5b86ee09c164d910ba5b6503834ecada3c20640
Former-commit-id: 57f3ba1345a4e049bc6ff2147dee84bfa2adbc87
Former-commit-id: 97a7bcbd9903f29684ab4e22aa13f3fde8aa64d8

--- a/src/podiobooks/templates/themes/pb2-jq/base.html
+++ b/src/podiobooks/templates/themes/pb2-jq/base.html
@@ -15,9 +15,9 @@
 		<meta name="Description" content="Free audio books delivered as podcasts. Subscribe for free to any book and start from chapter one. Podiobooks.com" />
 		{% endblock %}
 	
-		<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}{{MINI_CSS}}" />
+		<link rel="stylesheet" type="text/css" href="{{MINI_CSS}}" />
 		<link rel="stylesheet" type=text/css href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/themes/base/jquery-ui.css" >
-		<script type="text/javascript" src="{{ MEDIA_URL }}{{MINI_JS}}"></script>
+		<script type="text/javascript" src="{{MINI_JS}}"></script>
 		
 		<script type="text/javascript" src="http://use.typekit.com/coc0qsu.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
