Trying to maintain the spirit of what Brant has going but still have working browse/search.
Pulled code back into search/browse tags, becuase those tags feed in extra data from the models into the top of them.

--- a/src/podiobooks/templates/themes/pb2-jq/header.html
+++ b/src/podiobooks/templates/themes/pb2-jq/header.html
@@ -18,11 +18,8 @@
 			{% endif %}
 			</li>
 		</ul>
-		<h2>Browse</h2>
-		<ul class='browse-by'>
-			<li><a href='{% url contributor_list %}'>Author</a></li>
-			<li><a href='{% url category_list %}'>Category</a></li>
-		</ul>
+		
+		{% show_browsebox %}
 		
 		{% show_searchbox %}
 	</div>
