Tweaked .pg-head h2 left margin to fit the fact that I turned the typekit stuff back on by adding the font-family stuff back into styles.css.
Former-commit-id: 764d10ead0f1f80fc09dcf57bba65e1e66d1852f
Former-commit-id: 92c581548531aa9a540a87c88becd3a4b1c63cd6
Former-commit-id: 1b1ef18f04a3e2bd526b717519a0fd42a3e9dd7f
Former-commit-id: 154f05e286bc5958f7931d8d7df70a6f6531fc18
Former-commit-id: eb1fc08cd4aac14c18e90b5f0e27420c24c6f87c
Former-commit-id: 786dfcd7f81ed8eded2b989546d453cda2e3efc9

--- a/src/podiobooks/media/themes/pb2-jq/css/styles.css
+++ b/src/podiobooks/media/themes/pb2-jq/css/styles.css
@@ -3,6 +3,7 @@
  */
 body{
 	background:#fff url(img/bg.jpg) left top repeat-x;
+	font-family: "ff-dax-wide-web-pro-1", "ff-dax-wide-web-pro-2", "Verdana", "Arial", sans-serif;
 }
 a{
 	color:#0054A6;
@@ -40,7 +41,7 @@ a:hover{
 }
 .pg-head h2{
 	display:inline;
-	margin: 0 8px 0 80px;
+	margin: 0 8px 0 60px;
 	color:#464646;
 	font-weight:normal;
 }
