--- a/src/podiobooks/templates/themes/pb2-jq/main/tags/show_searchbox.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/tags/show_searchbox.html
@@ -1,4 +1,4 @@
-<form action="{% url title_search %}" method="POST" style="display:inline;">
+<form action="{% url title_search %}" method="POST" class="search">
     <label for="id_keywords">
         <h2>Search</h2>
     </label>
