Removed in-line styling, which is now in styles.css.

--- a/src/podiobooks/templates/themes/pb2-jq/main/tags/show_searchbox.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/tags/show_searchbox.html
@@ -3,7 +3,7 @@
         <h2>Search</h2>
     </label>
     {{ title_search_form.keywords }}
-	<button type="submit" style="margin: -2px 0 0 0; border: 1px solid #448ccb; background-color: #06539e; padding: 3px; color: white; font-size: 13px;">
+	<button type="submit">
         Search
     </button>
 </form>
