Added styles for search field and button in header, so they line up vertically correctly.
Former-commit-id: c98b4db25848c0204275f0298086a71e3d75fcf5
Former-commit-id: 0b6d7255c7ed0efd1761941ba138a4d27a4f39c6
Former-commit-id: 9ffc4d260331af311ca0ceba36120d025a24a1c0
Former-commit-id: 318e5d16f7c97d50aa071c249dccaca6265aaaea
Former-commit-id: c48b11a75f03ba5a0b7a7659b36270d90f137f1e
Former-commit-id: bbc1bd6d820e5893deccf30fb81e79cc78cf75d6

--- a/src/podiobooks/media/themes/pb2-jq/css/styles.css
+++ b/src/podiobooks/media/themes/pb2-jq/css/styles.css
@@ -55,6 +55,19 @@ a:hover{
 	text-decoration:underline;
 }
 
+.pg-head .search #id_keywords {
+	margin: -3px 0 0 -7px;
+}
+
+.pg-head .search button {
+	margin: -3px 0 0 0;
+	border: 1px solid #448ccb;
+	background-color: #06539e;
+	padding: 3px;
+	color: white;
+	font-size: 13px;
+}
+
 .nav{
 	list-style:none;
 	display:inline;
@@ -73,7 +86,7 @@ a:hover{
 	display:inline;
 }
 .search h2{
-	margin-left:40px;
+	margin-left:30px;
 }
 
 .pg-foot{
