--- a/src/podiobooks/templates/themes/pb2-jq/base.html
+++ b/src/podiobooks/templates/themes/pb2-jq/base.html
@@ -15,12 +15,10 @@
 		<meta name="Description" content="Free audio books delivered as podcasts. Subscribe for free to any book and start from chapter one. Podiobooks.com" />
 		{% endblock %}
 	
-		<link rel="stylesheet" type="text/css" href="{{MINI_CSS}}" />
+		<link rel="stylesheet" type="text/css" href="{{ MINI_CSS }}" />
 		<link rel="stylesheet" type=text/css href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/themes/base/jquery-ui.css" >
-		<script type="text/javascript" src="{{MINI_JS}}"></script>
-		
-		<script type="text/javascript" src="http://use.typekit.com/coc0qsu.js"></script>
-		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+		<script type="text/javascript" src="{{ MINI_JS }}"></script>
+
 		{% if debug %}
 			<script type="text/javascript">
 				var isDebug = true;
@@ -31,19 +29,23 @@
 			</script>
 		{% endif %}
 		
-		<script src="http://www.google.com/jsapi?key=ABQIAAAApKHrTPdMsrKnaI74fSfnhBQ1oE6XAUbmObyC_RwYQIb0R2PjHBRZWTF3zf-YwVXFv_qiaAb_sT04aA" type="text/javascript"></script>
+		<script src="http://www.google.com/jsapi?key={{ GOOGLE_JS_API_KEY }}" type="text/javascript"></script>
 		<script language="Javascript" type="text/javascript">
 		    //<![CDATA[
-		    google.load("jquery", "1.4.2");
-			google.load("jqueryui", "1.8");
+			google.setOnLoadCallback(function() {
+				WebFont.load({
+					typekit: {
+    					id: '{{ TYPEKIT_KIT_ID }}'
+				}
+				});
+			});
+			
+			google.load("webfont", "1");
+		    google.load("jquery", "1.5");
+			google.load("jqueryui", "1.8.9");
 			//]]>
 		</script>
 		
-		<!--
-		<script language="JavaScript" type="text/javascript">
-			var preLoadLoadingImage = $('<img />').attr('src', '{{ THEME_MEDIA_URL }}images/loading.gif');
-		</script>
-		-->
 		{% block head %}
 		{% endblock %}
 	
