--- a/src/podiobooks/templates/themes/pb2-jq/main/title/tags/show_titlelist.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/title/tags/show_titlelist.html
@@ -1,7 +1,7 @@
 {% load title_templatetags %}
 <ul>
     {% for title in title_list %}
-    <li class="{% cycle 'row1' 'row2' %}" style="margin: 15px 0 30px 5px;">
+    <li style="margin: 15px 0 30px 5px; list-style: none;">
         <img src="http://podiobooks.com/images/covers/{{ title.cover }}" height="150" width="100" alt="Cover for {{ title.name }}" style="float: left;">
         <div id="titleList" style="float: left; height:80px; margin: 5px 0 0 15px; width: 850px; font-size: 12px">
             <div style="font-size: 16px">
@@ -22,7 +22,7 @@
 			</div>
 			{% endif %}
         </div>
-        <div class="pb-float-clear">
+        <div class="clearfix">
         </div>
     </li>
     {% endfor %}
