Basic updates and fixes for author/category browse list pages so they look halfway decent.

--- a/src/podiobooks/templates/themes/pb2-jq/main/title/tags/show_titlelist.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/title/tags/show_titlelist.html
@@ -7,14 +7,18 @@
             <div style="font-size: 16px">
                 <a href="{{ title.get_absolute_url }}">{{ title.name }}</a>
             </div>
+            {% if page_name != 'contributor_title_list' %}
             <div style="font-size: 13px; margin: 10px 0 7px 0;">
                	{{ title.byline|safe }}
             </div>
+            {% endif %}
+            {% if page_name != 'category_title_list' %}
             <div style="font-size: 13px; margin: 0 0 7px 0;">
                 {{ title.category_list|safe }}
             </div>
-            <div style="clear: both;">
-                {% autoescape off %}{{ title.description|striptags|truncatewords_html:80 }}{% endautoescape %} <a href="{{ title.get_absolute_url }}">[more]</a>
+            {% endif %}
+            <div class="clearfix">
+                {% autoescape off %}{{ title.description|striptags|truncatewords_html:95 }}{% endautoescape %} <a href="{{ title.get_absolute_url }}">[more]</a>
             </div>
 			{% if title.sphinx %}
 			<div style="font-size: 9px; font-style: italic">
