--- a/src/podiobooks/templates/themes/pb2-jq/main/category/category_detail.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/category/category_detail.html
@@ -6,7 +6,7 @@
 <h1>
     All Titles in {{ category.name }}
 </h1>
-{% show_titlelist category.title_set.all %}
+{% show_titlelist category.title_set.all "category_title_list" %}
 {% else %}
 <div style="font-size: 18px; margin: 20px;">
     There are currently no titles available in {{ category.name }}
