Added page name parameter to title_list invocations.
Former-commit-id: b08794f06c1270aa0479aa69e285a7d71969f730
Former-commit-id: acdd35fd99c6192c243f28121bbd1acc36d0e0c8
Former-commit-id: f6a9aaf7b192f375b574f9807bcf5e25b86d9d3a
Former-commit-id: 1c2cc4a3461aa287f8d91be02b2bd8caf3c05f97
Former-commit-id: 319855e99a9cb1796895d0ec7fd76b2785e51673
Former-commit-id: 8c2825ab6817da985ac3f4f1b97d75f9bd375734

--- a/src/podiobooks/templates/themes/pb2-jq/main/title/title_list.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/title/title_list.html
@@ -3,7 +3,7 @@
 
 {% block headtitle %}All Titles - {{ site_name }}{% endblock %}
 
-{% show_titlelist title_list %}
+{% show_titlelist title_list "title_list" %}
 
 {% block content %}
 
