--- a/src/podiobooks/templates/themes/pb2-jq/main/title/title_search_results.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/title/title_search_results.html
@@ -22,7 +22,7 @@
 <h4>Adult titles {% if titleSearchForm.cleaned_data.include_adult %}<strong>are</strong>{% else %}are <strong>not</strong>{% endif %} included.</h4>
 <h4>{% if not titleSearchForm.cleaned_data.completed_only %}Both <strong>complete and incomplete</strong>{% else %}Only <strong>complete</strong>{% endif %} titles are included.</h4>
 <br />
-{% show_titlelist title_list %}
+{% show_titlelist title_list "title_search_results" %}
 {% else %}{% if titleSearchForm.cleaned_data.keywords %}<h3 style="font-size:16px; font-weight:bold; margin: 20px 20px 400px 40px;">No titles found whose name, description, or contributors contained "{{ keywords }}"</h3>{% endif %}
 {% endif %}
 {% endblock %}
