Updated with integrated in-line styles and using clearfix instead of pb-float-clear.
Former-commit-id: 778731c284bbd90ddf69a36f0a1f16c8786ba088
Former-commit-id: 548a274663a752d99a5b9a1ac5c9c22b7c9bd036
Former-commit-id: 5cef6f7a89d122ce33bb7a357ec9a45e8739bb2b
Former-commit-id: f48066f6048c8ca28fd03be72a68b5435c5c0896
Former-commit-id: 0d9637ab83ecc03ea6d8cee95833ad9bce250515
Former-commit-id: b331ef5b535694249490b0ead025eae3be24208c

--- a/src/podiobooks/templates/themes/pb2-jq/main/title/title_subscriptionbox.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/title/title_subscriptionbox.html
@@ -1,15 +1,15 @@
 {% load title_templatetags %}
-{% load subscription_templatetags %}<!-- Begin SubscriptionBox -->
-<div class="pb-infobox" id="subscriptionBox">
-    <div class="pb-infobox-left">
+{% load subscription_templatetags %}
+<div id="subscriptionBox" style="float: right; position: relative; margin: 0 5px 0 0;">
+    <div style="float: left; height: 463px; width: 13px; background: url(../images/pb-infobox-light-ends.png) bottom left no-repeat;">
     </div>
-    <div class="pb-infobox-middle" style="width: 200px;">
-        <div class="pb-infobox-headphones" style="margin: 0 0 0 20px;">
+    <div style="float: left; height: 463px; width: 190px; font-size: 12px; background: url(../images/pb-infobox-light-middle.png) repeat-x;">
+        <div style="background: url(../images/pb-headphones.png) no-repeat; height: 63px; width: 165px; text-align: center; font-size: 14px; font-weight: bold; margin: 0 0 0 13px; padding: 18px 0 0 0;">
             Get This
             <br>
             Book Now!
         </div>
-        <div class="pb-float-clear">
+        <div class="clearfix">
         </div>
         <div id="accordion" style="opacity: 0;">
             <h2><a href="#rss">Subscribe for Free!</a></h2>
@@ -33,7 +33,7 @@
         <br>
         {% show_donation_button title %}
     </div>
-    <div class="pb-infobox-right">
+    <div style="float: left; height: 463px; width: 13px; background: url(../images/pb-infobox-light-ends.png) bottom right no-repeat;">
     </div>
 </div>
 <script type="text/javascript">
@@ -42,4 +42,3 @@
         $('#accordion').css('opacity', 1);
     });
 </script>
-<!-- End SubscriptionBox -->
