Removed unused class tags; worked in in-line styles, renamed classes to shorten names.
Former-commit-id: db75fd7711f7a2c976449cf6b05216f1ba44a777
Former-commit-id: 73b5b0e3bd8b42b7cbf6461e150517ac7b7d4f20
Former-commit-id: 2df980f4e619f5ced03003e3d8f7a1dfca594baa
Former-commit-id: ebb9f4b80ee44e0f3684918f016558958131cfae
Former-commit-id: 4cc7f8ea4d9a9b322187096d3ed336e201c394a0
Former-commit-id: c6b3fc02d40c43b209292a87efd44de094c07bde

--- a/src/podiobooks/templates/themes/pb2-jq/main/title/tags/show_titlecover.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/title/tags/show_titlecover.html
@@ -1,16 +1,16 @@
 {% load global_templatetags %}
 {% if title %}
-<div class="pb-title-cover">
-    <div class="pb-title-cover-image-wrapper loading" style="height:212px; width:144px">
-        <a href="{{ title.get_absolute_url }}">{% if title.libsyn_show_id %}<img class="pb-title-cover-image" src="http://images.libsyn.com/show/{{ title.libsyn_show_id }}/height/212/width/144" width="144" height="212" alt="Podiobook Cover for {{ title.name }}"/>{% else %}<img class="pb-title-cover-image" src="http://podiobooks.com/images/covers/{{ title.cover }}" alt="Podiobook Cover for '{{ title.name }}'" width="144" height="212"/>{% endif %}</a>
+<div>
+    <div class="loading" style="height:212px; width:144px">
+        <a href="{{ title.get_absolute_url }}">{% if title.libsyn_show_id %}<img id="cover-image" src="http://images.libsyn.com/show/{{ title.libsyn_show_id }}/height/212/width/144" alt="Podiobook Cover for {{ title.name }}" style="height:212px; width:144px; border: none;"/>{% else %}<img class="cover-image" src="http://podiobooks.com/images/covers/{{ title.cover }}" alt="Podiobook Cover for '{{ title.name }}'" style="height:212px; width:144px; border: none;"/>{% endif %}</a>
     </div>
-    <div class="pb-title-complete-notice">
-        This podiobook is <span class="pb-title-complete-notice-indicator">{% if title.is_complete %}complete{% else %}still releasing{% endif %}</span>
+    <div style="font-size:10px;">
+        This podiobook is <span style="color:green; font-weight:bold;">{% if title.is_complete %}complete{% else %}still releasing{% endif %}</span>
     </div>
 </div>
 <script type="text/javascript">
-    $('.pb-title-cover-image').hide();
-    $('.pb-title-cover-image').load(function(){
+    $('#cover-image').hide();
+    $('#cover-image').load(function(){
         $(this).fadeIn();
     });
 </script>
