Added loading tag with spinner image.
Former-commit-id: f082809838d9e5df82e3fd7d70651418f4e352b3
Former-commit-id: ca7a698a556fe64aeaee9069f017dbc5c4322f73
Former-commit-id: ca636e7896fbd81eec7d6abe09c9407779b92214
Former-commit-id: 34f82462cefc3dc49bd1fb61f4211fffbe545724
Former-commit-id: cc45925d2efe6da45a750593ea7c91eaaa4072e8
Former-commit-id: ef680026797d0475df94e549341f179dd1ad4f0b

--- a/src/podiobooks/media/themes/pb2-jq/css/styles.css
+++ b/src/podiobooks/media/themes/pb2-jq/css/styles.css
@@ -68,6 +68,10 @@ a:hover{
 	font-size: 13px;
 }
 
+.loading {
+    background: url(img/loading.gif) no-repeat center center;
+}
+
 .nav{
 	list-style:none;
 	display:inline;
