Added cover height/width to titlecover tag.

--- a/src/podiobooks/templates/themes/pb2-jq/main/title/tags/show_titlecover.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/title/tags/show_titlecover.html
@@ -1,12 +1,7 @@
 {% load global_templatetags %}
 {% if title %}
-<div>
-    <div class="loading" style="height:212px; width:144px">
-        <a href="{{ title.get_absolute_url }}">{% if title.libsyn_show_id %}<img id="cover-image" src="http://images.libsyn.com/show/{{ title.libsyn_show_id }}/height/212/width/144" alt="Podiobook Cover for {{ title.name }}" style="height:212px; width:144px; border: none;"/>{% else %}<img class="cover-image" src="http://podiobooks.com/images/covers/{{ title.cover }}" alt="Podiobook Cover for '{{ title.name }}'" style="height:212px; width:144px; border: none;"/>{% endif %}</a>
-    </div>
-    <div style="font-size:10px;">
-        This podiobook is <span style="color:green; font-weight:bold;">{% if title.is_complete %}complete{% else %}still releasing{% endif %}</span>
-    </div>
+<div class="loading" style="height:{{ cover_height }}px; width:{{ cover_width }}px">
+    <a href="{{ title.get_absolute_url }}">{% if title.libsyn_show_id %}<img id="cover-image" src="http://images.libsyn.com/show/{{ title.libsyn_show_id }}/height/{{ cover_height }}/width/{{ cover_width }}" alt="Cover for {{ title.name }}" style="height:{{ cover_height }}px; width:{{ cover_width }}px; border: none;"/>{% else %}<img class="cover-image" src="http://podiobooks.com/images/covers/{{ title.cover }}" alt="Cover for '{{ title.name }}'" style="height:{{ cover_height }}px; width:{{ cover_width }}px; border: none;"/>{% endif %}</a>
 </div>
 <script type="text/javascript">
     $('#cover-image').hide();
