Reworked page to use inline styles, and tweaked the way the cover works.
Former-commit-id: 818c61d30cf85dde23ce958d95a399bd1db774a7
Former-commit-id: 9f657935f2c79d3a66549fe35b125bb766e387ca
Former-commit-id: 107be9b3774368b60c2b6e7edfb99bd3d9702d8d
Former-commit-id: a4d14ecb659eef1d9567728f7862b909e278af4b
Former-commit-id: e7f975d462d12871f59d7d98303a2b99b16bd2e7
Former-commit-id: fcc2fd5adbd934325207fa664b47bfeec6bb0e68

--- a/src/podiobooks/templates/themes/pb2-jq/main/title/tags/show_titlelist.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/title/tags/show_titlelist.html
@@ -2,8 +2,10 @@
 <ul>
     {% for title in title_list %}
     <li style="margin: 15px 0 30px 5px; list-style: none;">
-        <img src="http://podiobooks.com/images/covers/{{ title.cover }}" height="150" width="100" alt="Cover for {{ title.name }}" style="float: left;">
-        <div id="titleList" style="float: left; height:80px; margin: 5px 0 0 15px; width: 850px; font-size: 12px">
+    	<div style="float: left;">
+        	{% show_titlecover title 150 100 %}
+        </div>
+        <div id="titleList" style="float: left; margin: 5px 0 0 15px; width: 820px; font-size: 12px">
             <div style="font-size: 16px">
                 <a href="{{ title.get_absolute_url }}">{{ title.name }}</a>
             </div>
