--- a/src/podiobooks/templates/themes/pb2-jq/main/title/title_detail.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/title/title_detail.html
@@ -4,7 +4,6 @@
 {% load disqus_tags %}
 {% block headtitle %}{{ title.name }} - {{ site_name }}{% endblock %}
 {% block head %}
-<link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/title_detail.css">
 <link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/infobox.css">
 {% disqus_dev %}
 {% endblock %}
@@ -12,18 +11,21 @@
 {% block content %}
 <div class="title-detail" style="margin: 0 0 30px 0;">
     <div style="float:left; text-align: center;">
-        {% show_titlecover title %}
-        <div style="margin: 10px 0 0 30px; width: 90px;">
-            <div class="pb-item-rating-promoter">
+        {% show_titlecover title 212 144 %}
+		<div style="font-size:10px;">
+		    This title is <span style="color:green; font-weight:bold;">{% if title.is_complete %}complete{% else %}still releasing{% endif %}</span>
+		</div>
+        <div style="margin: 10px 0 0 30px; width: 90px; font-size: 11px; font-weight: bold; text-align: center; color: #000;">
+            <div style="width: 34px; height: 48px; background: url('{{ THEME_MEDIA_URL }}/images/pb-thumbs-both.png') no-repeat top left; float: left;">
                 {{ title.promoter_count }}
             </div>
-            <div class="pb-item-rating-detractor">
+            <div style="width: 33px; height: 48px; background: url('{{ THEME_MEDIA_URL }}/images/pb-thumbs-both.png') no-repeat top right; float: right; padding: 12px 0 0 0;">
                 {{ title.detractor_count }}
             </div>
-            <div class="pb-float-clear">
+            <div class="clearfix">
             </div>
         </div>
-        <div class="pb-float-clear">
+        <div class="clearfix">
         </div>
         <div style="margin: 5px 0 0 15px; height: 100px; width: 100px;">
             {% show_awardshow title %}
@@ -61,13 +63,13 @@
         <div id="featured-comments-tab" style="height: 300px; overflow-y: scroll;">
             Lorem Comments
         </div>
-		<div id="social-tab" style="height: 300px; overflow-y: scroll;">
+        <div id="social-tab" style="height: 300px; overflow-y: scroll;">
             Searching the internets for references to {{ title.contributors.all|first }}...
         </div>
     </div>
 </div>
 {% include "main/title/title_subscriptionbox.html" %}
-<div class="pb-float-clear">
+<div class="clearfix">
 </div>
 <div style="margin: 0; padding: 0; width: 100%; height: 700px;" id="bottomTabs">
     <ul>
@@ -93,28 +95,30 @@
 </div>
 {% if title.license %}
 <div style="float: left; margin: 20px 0px 0px 0px;">
-    <a rel="license" href="{{ title.license.url }}"><img alt="{{ title.license.text }} Logo" style="border-width:0" src="{{ title.license.image_url }}" /></a>
+    <a rel="license" href="{{ title.license.url }}">
+    <img alt="{{ title.license.text }} Logo" style="border-width:0" src="{{ title.license.image_url }}" />
+    </a>
 </div>
 <div style="float: left; margin: 26px 0px 10px 10px;">
-    This work is licensed under a <a href="{{ title.license.url }}">{{ title.license.text }}</a>
-    license.
+    This work is licensed under a
+    <a href="{{ title.license.url }}">{{ title.license.text }}</a> license.
 </div>
 <div style="clear: both">
 </div>
 <script type="text/javascript">
-	$(function(){
+    $( function() {
         $("#topTabs").tabs({
             ajaxOptions: {
-                error: function(xhr, status, index, anchor){
+                error: function(xhr, status, index, anchor) {
                     $(anchor.hash).html("Couldn't load this tab.");
                 }
             }
         });
     });
-    $(function(){
+    $( function() {
         $("#bottomTabs").tabs({
             ajaxOptions: {
-                error: function(xhr, status, index, anchor){
+                error: function(xhr, status, index, anchor) {
                     $(anchor.hash).html("Couldn't load this tab.");
                 }
             }
