--- a/src/podiobooks/templates/themes/pb2-jq/main/index.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/index.html
@@ -28,7 +28,7 @@
 	
 	{% for t in featured_title_list %}
 	<div class='clearfix shelf-item'>
-		<h3><a href='{{t.get_absolute_url}}'>{{t.name}}</a></h3>
+		<h3><a href='{{t.get_absolute_url}}'>{{ t.name|striptags|truncatewords_afterchar:"25" }}</a></h3>
 		<p class='shelf-cover'>	<a href='{{t.get_absolute_url}}'>
 			{% if title.libsyn_show_id %}
 				<img src="http://images.libsyn.com/show/{{ tlibsyn_show_id }}/height/212/width/144" alt="Podiobook Cover for {{ t.name }}"/>
@@ -38,7 +38,7 @@
 			</a>
 		</p>
 	
-		<p>{{t.description|striptags|truncatewords:"15"}}</p>
+		<p>{% autoescape off %}{{ t.description|striptags|truncatewords_afterchar:"100" }}{% endautoescape %}</p>
 	</div>
 	{% endfor %}
 </div>
