First pass at setting up a real UserProfile.  Not sure I really want to use the /profile stuff for general profile access, but that's the way I set it up. Cropped pic of Nathan Lowell to use for profile testing purposes. Next step is to integrate profile stuff into Contributor Detail page and vice versa.
Former-commit-id: 8f11635c903e116e30b28d93955d6531a58b3131
Former-commit-id: a0c114a9962cb565b78bac6231c8e6cad7c70e4a
Former-commit-id: 98d7518805cd7b419d6ad6d03e52f108b9177aa9
Former-commit-id: 8065ae9f53eef54d24766ccc0d215266647742e4
Former-commit-id: 559638965b37944d0e51f324df7e6c1a7890eabf
Former-commit-id: c33361e2b70c75d56c05373ac2748c8e25e21788

--- a/src/podiobooks/templates/themes/pb2-jq/profile/profile.html
+++ b/src/podiobooks/templates/themes/pb2-jq/profile/profile.html
@@ -31,83 +31,55 @@
     }
 </style>
 {% endblock %}
-{% block title %}Podiobooks User Profile{% endblock %}
+{% block title %}Podiobooks Profile{% endblock %}
 {% block content %}
 {% if msg %}
 <p class="error">
     {{ msg }}
 </p>
 {% endif %}
-<h1>{{ user.username }}'s Profile</h1>
-<h3><a href="{% url subscription %}">Manage Your Podiobook Subscriptions</a></h3>
 <dl class="table-display">
     <dt>
-        Username:
+        Name:
     </dt>
     <dd>
-        {{ user.username }}&nbsp;
+        {{ profile.user.get_full_name }}&nbsp;
     </dd>
     <dt>
-        Email:
+        Short Description:
     </dt>
     <dd>
-        {{ user.email }}&nbsp;
+        {{ profile.short_profile }}&nbsp;
     </dd>
     <dt>
-        Full Name:
+        Long Description:
     </dt>
     <dd>
-        {{ user.get_full_name }}&nbsp;
+        {{ profile.long_profile }}&nbsp;
     </dd>
     <dt>
-        First Name:
+        URL:
     </dt>
     <dd>
-        {{ user.first_name }}&nbsp;
+        <a href="{{ profile.url }}">{{ profile.url }}</a>&nbsp;
     </dd>
     <dt>
-        Last Name:
+        Twitter Username:
     </dt>
     <dd>
-        {{ user.last_name }}&nbsp;
-    </dd>
-    <dt>
-        Staff:
-    </dt>
-    <dd>
-        {% if user.is_staff %}Yes{% else %}No{% endif %}&nbsp;
-    </dd>
-    <dt>
-        Superuser:
-    </dt>
-    <dd>
-        {% if user.is_superuser %}Yes{% else %}No{% endif %}&nbsp;
-    </dd>
-    <dt>
-        Last Login:
-    </dt>
-    <dd>
-        {{ user.last_login }}&nbsp;
-    </dd>
-    <dt>
-        Date Joined:
-    </dt>
-    <dd>
-        {{ user.date_joined }}&nbsp;
-    </dd>
-    <dt>
-        Profile Slug:
-    </dt>
-    <dd>
-        {{ user.get_profile.slug }}&nbsp;
+        <a href="http://twitter.com/{{ profile.twitter_username }}">{{ profile.twitter_username }}</a>&nbsp;
     </dd>
     <dt>
         Avatar (Defaults to Gravatar for your Email Address):
     </dt>
     <dd>
+    	{% if profile.image %}
+    	<img src={{ MEDIA_URL }}/{{ profile.image }} style="width:200px; height:200px;">
+    	{% else %}
         <img src="{% avatar_url user 65 %}" alt="user avatar">
+        {% endif %}
     </dd>
 </dl>
-<div class="pb-float-clear">
+<div class="clearfix">
 </div>
 {% endblock %}
