--- a/src/podiobooks/templates/themes/pb2-jq/header.html
+++ b/src/podiobooks/templates/themes/pb2-jq/header.html
@@ -11,7 +11,7 @@
 			<li><a href='#'>Community</a></li>
 			<li>
 			{% if user.is_authenticated %}
-				<a href="{% url profile %}">My Account</a></li>
+				<a href="{% url profile_manage %}">My Account</a></li>
 				<li><a href="{% url django_authopenid.views.signout %}">Logout {{ user.username }}</a>
 			{% else %} 	
 				<a href="{% ssl_site_login_url %}">Login/Register</a>
