Removed Gravatar message.
Former-commit-id: 23d7a629052c23fd84c360487fe89506ef6b4067
Former-commit-id: b1c73803c38f0c8276c2f3896d33e76eba6d4f76
Former-commit-id: b249aceae2f2bdd27dd02365f69e5e1245a4ca74
Former-commit-id: 89c6e9a45711905a6a5a91147c3aa36227154df2
Former-commit-id: 4982678a5a436c2a380134556d6a24fae5f83da2
Former-commit-id: e8859425f522a1d94d2b46ffe5922567293554b0

--- a/src/podiobooks/templates/themes/pb2-jq/profile/profile.html
+++ b/src/podiobooks/templates/themes/pb2-jq/profile/profile.html
@@ -70,7 +70,7 @@
         <a href="http://twitter.com/{{ profile.twitter_username }}">{{ profile.twitter_username }}</a>&nbsp;
     </dd>
     <dt>
-        Avatar (Defaults to Gravatar for your Email Address):
+        Avatar:
     </dt>
     <dd>
     	{% if profile.image %}
