Removed Home link from heading bar, lowered font size on heading to fit everything in when MyAccount/logout links are showing.
Former-commit-id: 57b67120674cba6b94b6bbaee8e474dd491d12ca
Former-commit-id: d908acf9d03b7c87898d8f76ec7f6033d6d0834d
Former-commit-id: 8e456daa012ce860d9e8971c431aecaeef5d8786
Former-commit-id: a69568fcb47bea9488f48e21c2285f57c63761f8
Former-commit-id: 65e538c697e700646576e73e41fd084f8819dfef
Former-commit-id: 535a6cc04601ef5eced5b08d5265db7998de6a7d

--- a/src/podiobooks/media/themes/pb2-jq/css/styles.css
+++ b/src/podiobooks/media/themes/pb2-jq/css/styles.css
@@ -38,12 +38,13 @@ a:hover{
 	box-shadow:0 3px 5px #aaa;
 	margin:0 0 25px 0;
 	text-align:center;
+	font-size: 15px;
 }
 .pg-head h2{
 	display:inline;
 	margin: 0 8px 0 60px;
-	color:#464646;
-	font-weight:normal;
+	color: #464646;
+	font-weight: normal;
 }
 .pg-head a{
 	text-decoration:none;
