Fixed related ref from title_set to titles.
Former-commit-id: be4dabfe67e5f060a23d017a2b810643a30ed9de
Former-commit-id: b8d5d4c593e1bd8e4a3ba2e305165fe75c36a8f0
Former-commit-id: 600689e914ddd615ec9cc41303866152c48d2d89
Former-commit-id: 8bef6753bf7a03ce85c0907676e1ecba5ea6751b
Former-commit-id: fc582491cb6ec3a76b8adc11e128daad162f8cb5
Former-commit-id: b94cf9f262b41755a7678ceed88011a9ad52bef3

--- a/src/podiobooks/templates/themes/pb2-jq/main/series/series_detail.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/series/series_detail.html
@@ -2,11 +2,11 @@
 {% load title_templatetags %}
 {% block headtitle %}{{ category.name }} Series - {{ site_name }}{% endblock %}
 {% block content %}
-{% if series.title_set.all.count %}
+{% if series.titles.all.count %}
 <h1>
     All Titles in {{ series.name }}
 </h1>
-{% show_titlelist series.title_set.all "series_title_list" %}
+{% show_titlelist series.titles.all "series_title_list" %}
 {% else %}
 <div style="font-size: 18px; margin: 20px;">
     There are currently no titles available in {{ series.name }}
