Beginnings of a working features shelf.
Needs some plugin-atize-ation.


Former-commit-id: 546a7f5815d507c0263e7172b7322a570b58154e
Former-commit-id: a3bd5d75971a935e49c87fcff8334eada26db0e2
Former-commit-id: a67bc449ad91b95534db41d225cc86d08a2998d9
Former-commit-id: 3f0a4f814085576cddd8462b4e61ff00b7e549c2
Former-commit-id: 4bbb13733268c7b415abb91f73c1de85cf4f4ae3
Former-commit-id: eebc97f49c37cd531c1b67d9b887bbc0b7dc7451

--- a/src/podiobooks/media/themes/pb2-jq/css/shelf.css
+++ b/src/podiobooks/media/themes/pb2-jq/css/shelf.css
@@ -46,9 +46,32 @@
 	-o-box-shadow:0 3px 5px #aaa;
 	box-shadow:0 3px 5px #aaa;
 	
-	padding:0 10px;
+	padding:0 10px 5px 10px;
+	
+	position:relative;
+	z-index:3;
 }
-
+.shelf-view{
+	height:100%;
+	width:100%;
+	position:absolute;
+	top:0;
+	left:0;
+	
+	overflow:hidden;
+}
+.whole-shelf>div{
+	float:left;
+	margin-left:12px;
+}
+.whole-shelf{
+	overflow:hidden;
+	width:5000px;
+	height:100%;
+	position:absolute;
+	top:0;
+	left:0;
+}
 .shelf-item{
 	background:#fff;
 	float:left;
@@ -60,6 +83,7 @@
 	border-radius:10px;
 	padding:10px;
 	height:140px;
+	overflow:hidden;
 }
 .shelf-item .shelf-cover{
 	float:left;
@@ -85,6 +109,30 @@
 .shelf-item h3 a{
 	color:#0054a6;
 	text-decoration:none;
+}
+
+/*
+ * Next/Prev Arrows
+ */
+.shelf-arrow{
+	display:block;
+	position:absolute;
+	width:14px;
+	height:14px;
+	font-size:0;
+	color:transparent;
+	top:70px;
+}
+.shelf-arrow-right{
+	background:url(img/arrow-right.png) top left no-repeat;
+	z-index:5;
+	right:-7px;
+	
+}
+.shelf-arrow-left{
+	background:url(img/arrow-left.png) top left no-repeat;
+	z-index:5;
+	left:-7px;
 }
 
 
