see shelf.js for usage
Former-commit-id: 384bb681a47c360190dab397798424d36c71aff2
Former-commit-id: ebab039b8369cc1c129f19e6f99bd4ea574e7eee
Former-commit-id: b7f6f9f28ab0e77184b817645b8aae3e8e8aa2f4
Former-commit-id: 1058e212a95ada4b293a968650dfcd4205e101f7
Former-commit-id: 59adcf9c9caadfb45ae4270a523b3826a609de87
Former-commit-id: ce7d0b0d0d97782de708db6a61159ed5f2bff8c9

--- a/src/podiobooks/media/themes/pb2-jq/css/styles.css
+++ b/src/podiobooks/media/themes/pb2-jq/css/styles.css
@@ -16,7 +16,7 @@ a:hover{
  * Layout
  */
 .pg{
-	width:970px;
+	width:968px;
 	margin:0 auto;
 }
 .logo{
@@ -24,6 +24,11 @@ a:hover{
 	margin:0;
 	padding:0;
 	
+	
+}
+.logo,
+.logo img{
+	max-width:100%;
 }
 .pg-head{
 	background:#BDD1EA;
