--- a/src/podiobooks/media/themes/pb2-jq/css/shelf.css
+++ b/src/podiobooks/media/themes/pb2-jq/css/shelf.css
@@ -46,10 +46,14 @@
 	-o-box-shadow:0 3px 5px #aaa;
 	box-shadow:0 3px 5px #aaa;
 	
-	padding:0 10px 5px 10px;
+	padding:0 0px 5px 0px;
 	
 	position:relative;
 	z-index:3;
+	
+	width:100%;
+	height:181px;
+	margin-bottom:40px;
 }
 .shelf-view{
 	height:100%;
@@ -57,12 +61,7 @@
 	position:absolute;
 	top:0;
 	left:0;
-	
 	overflow:hidden;
-}
-.whole-shelf>div{
-	float:left;
-	margin-left:12px;
 }
 .whole-shelf{
 	overflow:hidden;
@@ -75,7 +74,7 @@
 .shelf-item{
 	background:#fff;
 	float:left;
-	width:200px;
+	width:206.5px;
 	margin:8px 8px;
 	-webkit-border-radius:10px;
 	-moz-border-radius:10px;
