--- a/src/podiobooks/templates/themes/pb2-jq/main/index.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/index.html
@@ -29,7 +29,7 @@
 	{% for t in featured_title_list %}
 	{% shelf_item t %}
 	{% endfor %}
-	<form class='genre-change'>
+	<form class='genre-change' action="/lazy/featured/" method="post">
 		{{category_choice_form.as_p}}
 	</form>
 </div>
