--- a/src/podiobooks/templates/themes/pb2-jq/main/title/title_detail.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/title/title_detail.html
@@ -39,7 +39,10 @@
     {{ title.byline|safe }}
     <br>
     {{ title.category_list|safe }}
-    
+    <br>
+    {% if title.series %}
+    <a href="{% url series_detail title.series.slug %}">{{ title.series.name|safe }}</a>
+    {% endif %}
     <div id="description">
         {% autoescape off %}{{ title.description_br|removetags:"img"|safe }}{% endautoescape %}
     </div>
@@ -47,7 +50,7 @@
 {% include "main/title/title_subscriptionbox.html" %}
 <div class="clearfix">
 </div>
-<div style="margin: 0; padding: 0; width: 100%; height: 700px;" id="bottomTabs">
+<div style="margin: 0; padding: 0; width: 100%;" id="bottomTabs">
     <ul>
         <li>
             <a href="#comments-tab">Comments</a>
@@ -59,10 +62,10 @@
             <a href="/social/twitter/search/{{ title.contributors.all|first }}" title="social-tab">Social</a>
         </li>
     </ul>
-    <div title="All Comments" id="comments-tab" style="height: 595px; overflow-y: scroll;">
+    <div title="All Comments" id="comments-tab">
         {% disqus_show_comments %}
     </div>
-    <div title="Chapters" id="chapters-tab" style="height: 595px; overflow-y: scroll;">
+    <div title="Chapters" id="chapters-tab">
         {% if title.episodes.all %}
         {% show_episodelist title %}
         {% else %}
@@ -71,7 +74,7 @@
         </div>
         {% endif %}
     </div>
-    <div id="social-tab" style="height: 300px; overflow-y: scroll;">
+    <div id="social-tab">
         Searching the internets for references to {{ title.contributors.all|first }}...
     </div>
 </div>
