--- a/src/podiobooks/media/themes/pb2-jq/css/shelf.css
+++ b/src/podiobooks/media/themes/pb2-jq/css/shelf.css
@@ -92,11 +92,12 @@
 }
 .shelf-item .shelf-cover img{
 	float:left;
-	width:100%;
-	height:auto;
+	width:75px;
+	height:110px;
 }
 .shelf-item .shelf-cover .shelf-cover-loading{
 	width:auto;
+	height:auto;
 	float:none;
 	margin:30px auto;
 }
