single book view (mobile) styling for dropdown
Former-commit-id: 5629554acc8ebe80ebb86f9a7e828630d505b27e
Former-commit-id: 9016c0c45587cf2440742859b51ac8bfee5c80a4
Former-commit-id: ec62840cbcd6a7d02d782f71c3b5202603497441
Former-commit-id: 18c6febfbe5d952d44968edb11a033ce26b68fd1
Former-commit-id: ecd2666fe1501241ea170dc09ad529afae9f8b1f
Former-commit-id: 352c1cdb919daf55560415627272c632b20761ba

--- a/src/podiobooks/media/themes/pb2-jq/css/mobile.css
+++ b/src/podiobooks/media/themes/pb2-jq/css/mobile.css
@@ -14,4 +14,16 @@
 	.pg{
 		width:242px;
 	}
+	
+	.shelf-heading{
+		
+		padding:10px 10px 35px 20px;
+	}
+	
+	.genre-change{
+		position:absolute;
+		left:15px;
+		top:-30px;
+	}
+	
 }
